Revise controller tests and add user model tests
Update controller tests to match Rails 7 routing/naming and response semantics (use login/logout/forgot/signup paths, adjust params, expect :unprocessable_entity for invalid requests, and update mailer assertion syntax). Add new integration tests for dashboard and user registration flows. Expand fixtures with first_name/last_name/username. Replace and greatly extend UserTest with setup, normalization, presence/uniqueness/length validations, and authentication specs. Minor cleanup in PasswordsController (parentheses and whitespace).

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,15 @@
 <% password_digest = BCrypt::Password.create("password") %>
 
 one:
+  first_name: john
+  last_name: doe
+  username: johndoe
   email_address: one@example.com
   password_digest: <%= password_digest %>
 
 two:
+  first_name: Nick
+  last_name: doe
+  username: nick1919
   email_address: two@example.com
   password_digest: <%= password_digest %>
