--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,19 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+
   web:
     build:
       context: .
@@ -29,10 +42,32 @@ services:
     environment:
       RAILS_ENV: development
       DATABASE_URL: postgres://postgres:password@db:5432/trivio_development
+      REDIS_URL: redis://redis:6379/0
       RAILS_LOG_TO_STDOUT: "true"
     depends_on:
       db:
         condition: service_healthy
+      redis:
+        condition: service_healthy
+    stdin_open: true
+    tty: true
+
+  sidekiq:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    entrypoint: [ "entrypoint.dev.sh" ]
+    command: bundle exec sidekiq -C config/sidekiq.yml
+    volumes:
+      - .:/app
+      - bundle_cache:/usr/local/bundle
+    environment:
+      RAILS_ENV: development
+      DATABASE_URL: postgres://postgres:password@db:5432/trivio_development
+      REDIS_URL: redis://redis:6379/0
+    depends_on:
+      - db
+      - redis
     stdin_open: true
     tty: true
 
@@ -48,9 +83,12 @@ services:
     environment:
       RAILS_ENV: test
       DATABASE_URL: postgres://postgres:password@db:5432/trivio_test
+      REDIS_URL: redis://redis:6379/0
       RAILS_LOG_TO_STDOUT: "true"
     depends_on:
       db:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     stdin_open: true
     tty: true
@@ -58,3 +96,4 @@ services:
 volumes:
   postgres_data:
   bundle_cache:
+  redis_data:
